# backend/models/common.go
@@ -9,6 +9,7 @@ import (
 type Models struct {
 	Accounts *AccountM
 	Recipes *RecipeM
+	Ingredients *IngredientM
 	Steps *StepM
 }
 
@@ -17,6 +18,7 @@ func InitModels(db *gorm.DB) *Models {
 
 	models.Accounts = NewAccount(repository.NewAccountsRep(db), models)
 	models.Recipes = NewRecipe(repository.NewRecipesRep(db), models)
+	models.Ingredients = NewIngredient(repository.NewIngredientsRep(db), models)
 	models.Steps = NewStep(repository.NewStepsRep(db), models)
 
 	return models
